- 国際化に関する変更
-- デフォルトのタイムゾーンとして、date.timezone を 'Asia/Tokyo' に設定
-- Ethna_I18N クラス に setTimeZone メソッドを追加 (static呼出)
- Ethna_MailSender にて、メール送信に問題がある場合の設定として 'mail_func_workaround' を追加
-- この値を true に設定すると、メールヘッダの改行コードを一律 CRLF にする処理を回避する
-- $mail = new Ethna_MailSender(); $mail->setOption(array('mail_func_workaround')); でも設定可能
- Ethna_Plugin::import という，プラグインソースをincludeするための，staticメソッドを追加．

*** bug fix

- ethna make-plugin-package のデフォルトインストールディレクトリが誤っていたバグを修正
- iniディレクティブ date.timezone が設定されてないために、E_WARNING が PHP 5.3.0 で出ていたバグを修正
- Ethna_Plugin::includePlugin メソッドの実装が動作するものではなかったので変更

** 2.5.0-preview5

*** features

- フォーム定義に関する変更
-- フォーム定義を動的に変更するためのAPIをさらに追加
-- Ethna_ActionForm#setFormDef_ViewHelper
- APPID_Controller.php のスケルトンに継承を想定したメソッドを追加
-- skel/app.controller.php _setDefaultTemplateEngin
- add-project 時の www 以下に出来るエントリポイントから APPID_Controller へのパスを相対パスに変更
- ethna コマンドの挙動変更
-- ethna help コマンドを追加
- 指定 Action が存在しない場合、app/action 以下を全て include する仕様を変更
-- include せず、fallback用のactionを実行する
- add-project -b オプションの挙動変更
- controller での smarty_xx_plugin の機能を削除
- ビューまわりの変更
-- Ethna_ActionClass から、Ethna_ViewClass#preforward に引数を渡せるようにした
--- return array('forward_name', $params); の形式で渡せば、$params が preforwardの引数として渡される
-- 汎用ビュークラスを実装
--- ビューへの出力時によく使われる処理を雛形として実装したもの
--- Ethna_View_Json.php
--- Ethna_View_403.php
--- Ethna_View_404.php
--- Ethna_View_500.php
--- Ethna_View_Redirect.php
---- アクションクラスで return array('redirect', 'http://example.com');
     とすれば http://example.com にリダイレクトされる
-- レイアウトテンプレートを実装
--- HTMLの外側に当たる雛形のテンプレートを描くためのもの。各アクションの出力はこのテンプレートの出力でラップされる
--- デフォルトは template/{locale_name}/layout.tpl に置かれている。
--- この機能はデフォルトで有効になっている。無効にしたければ、[appid]_ViewClass.php の $use_layout を false にする
-- フォームヘルパのテキストエリアに value 属性を付加していた動きを修正。(thanks: syachi5150)
---  http://sourceforge.jp/ticket/browse.php?group_id=1343&tid=16326
- [Breaking B.C] プラグインに関する変更
-- プラグインから名前空間を除去することで、複数アプリケーションでの利用を可能に
-- 検索用のアプリケーションIDを削除した
-- ファイル名の命名規則を変更
-- extlibの設置